fix multiline issue on safari (#509)

--- a/src/components/RangeInput/style.scss
+++ b/src/components/RangeInput/style.scss
@@ -66,7 +66,7 @@
   top: -15px;
 
   .content {
-    width: 78px;
+    min-width: 78px;
     background-color: white;
     color: black;
     border-radius: 6px;
@@ -89,6 +89,8 @@
 
     span {
       font-size: 8px;
+      white-space: nowrap;
+      padding: 0 10px;
     }
 
     &::after {
